[package]
name = "bot"
version = "0.1.0"
edition = "2021"
description = "cli"
authors = ["tian <tian@racoons.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0" 
anchor-client={version="0.28.0", features=["async"]}
clap = { version = "4.3.3", features = ["derive"] }
anyhow = "1.0.71"
shellexpand = "3.1.0"
rust_decimal = { version = "1.31.0", features = ["maths"] }
lb_clmm =  { path = "../programs/lb_clmm", features = ["cpi"] }
cli = { path = "../cli" }
spl-associated-token-account = "1"
mpl-token-metadata = "3.0.1"
rand = "0.8.5"
tokio = {version = "~1.14.1", features = ["full", "parking_lot"]}
solana-client = "1.16.17"
spl-memo = "4.0.0"


[dev-dependencies]
proptest = "1.2.0"
