[package]
name = "bot"
version = "0.1.0"
edition = "2021"
description = "cli"
authors = ["tian <tian@racoons.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0" 
anchor-client={version="0.28.0", features=["async"]}
clap = { version = "4.3.3", features = ["derive", "env"] }
anyhow = "1.0.71"
shellexpand = "3.1.0"
rust_decimal = { version = "1.31.0", features = ["maths"] }
lb_clmm =  { path = "../programs/lb_clmm", features = ["cpi"] }
cli = { path = "../cli" }
spl-associated-token-account = "1"
mpl-token-metadata = "3.0.1"
rand = "0.8.5"
tokio = {version = "~1.14.1", features = ["full", "parking_lot", "rt-multi-thread"]}
solana-client = "1.16.17"
solana-program = "1.16.17"
solana-metrics = "1.16.17"
solana-address-lookup-table-program = "1.16.17"
solana-sdk = "=1.16.17"
solana-transaction-status = "=1.16.17"
spl-memo = "4.0.0"
bincode = "1.3.3"
chrono = "0.4.24"
crossbeam-channel = "0.5.7"
env_logger = "0.9"
futures = "0.3.28"
futures-util = "0.3.28"
histogram = "0.6.9"
log = "0.4.17"
prost-types = "0.11.8"
jito-protos = { path = "../jito_protos" }
jito-searcher-client = { path = "../searcher_client" }
thiserror = "1.0.40"
tonic = { version = "0.8.3", features = ["tls", "tls-roots", "tls-webpki-roots"] }


[dev-dependencies]
proptest = "1.2.0"
